# VQA

./: .gitignore  README.md  bangla_bert_prompt.ipynb  bornon-dataset.csv  data_correction.ipynb  data_validation.ipynb  data_validation_bornon.ipynb  data_validation_chitron.ipynb  dataset_explore.ipynb  dummy.csv  gemini_qa.ipynb  gpt_vision.ipynb  pyproject.toml  top_captioned.csv  validate_gpt4.csv
